<resources>
    <string name="app_name">Printer</string>
    <string name="test">Test</string>
    <string name="test_zebra">Test Zebra</string>
    <string name="test_brother">Test Brother</string>
    <string name="bt_device">BT Device:</string>
    <string name="connect_device">Connect Device</string>
    <string name="button_refresh">Refresh</string>
    <string name="no_bluetooth_device">No Devices</string>
    <string name="not_connected">Not connected</string>
    <string name="barcode_input">123456789</string>
    <string name="brother_log_output">Brother Log output:</string>
    <string name="clear">Clear</string>
    <string name="test_citizen">Test Citizen</string>
    <string name="test_tsc">Test TSC</string>
    <string name="test_xprinter">Test Rongta</string>
    <string name="connect">Connect</string>
    <string name="connect_to">Connect to:</string>
    <string name="choose_manufacturer">Choose manufacturer:</string>
    <string name="connected">Connected</string>
    <string name="name">Name:</string>
    <string name="mac_address">MAC address:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="reconnect">Reconnect</string>
    <string name="print">Print</string>
</resources>
