<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/connection_status_border"
    android:orientation="vertical">

    <com.radko.printer.view.BaseTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/connected"
        android:textColor="@color/lightGreen"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.radko.printer.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/primaryDark"
            android:textSize="16sp" />

        <com.radko.printer.view.BaseTextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.radko.printer.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac_address"
            android:textColor="@color/primaryDark"
            android:textSize="16sp" />

        <com.radko.printer.view.BaseTextView
            android:id="@+id/macAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.radko.printer.view.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer"
            android:textColor="@color/primaryDark"
            android:textSize="16sp" />

        <com.radko.printer.view.BaseTextView
            android:id="@+id/manufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.radko.printer.view.BaseTextView
        android:id="@+id/reconnectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/reconnect_btn_border"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/reconnect"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

</LinearLayout>